tela de usuario

--- a/serviceOrder/nbproject/project.properties
+++ b/serviceOrder/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/serviceOrder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.48-bin.jar=/Users/pauloviniciusbarbosacorazza/Downloads/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\paulo.corazza\\Documents\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
