--- a/serviceOrder/nbproject/project.properties
+++ b/serviceOrder/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/serviceOrder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\paulo.corazza\\Documents\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar-1=/Users/pauloviniciusbarbosacorazza/Downloads/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
