--- a/serviceOrder/nbproject/project.properties
+++ b/serviceOrder/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\paulo.corazza\\Documents\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar-1=/Users/pauloviniciusbarbosacorazza/Downloads/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48-bin.jar
+file.reference.rs2xml.jar=/Users/pauloviniciusbarbosacorazza/Downloads/rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar-1}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
